image not found slved

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="card-container">
             <div class="card-1">
                 <div class="card-one-img">
-                    <img src="/images/first-jacket.png" alt="">
+                    <img src="images/first-jacket.png" alt="">
                 </div>
                 <div class="card-one-text">
                     <h3>Yellow Coat JACKET</h3>
@@ -70,7 +70,7 @@
             </div>
             <div class="card-2">
                 <div class="card-two-img">
-                   <img src="/images/second-jacket.png" alt="">
+                   <img src="images/second-jacket.png" alt="">
                 </div>
                 <div class="card-two-text">
                     <h3>Ladies Jacket</h3>
@@ -86,7 +86,7 @@
             </div>
             <div class="card-3">
                 <div class="card-three-img">       
-                    <img src="/images/third-jacket.png" alt="">
+                    <img src="images/third-jacket.png" alt="">
                 </div>
                 <div class="card-three-text">
                     <h3>Woman Leather Jacket</h3>
@@ -107,7 +107,7 @@
      <div class="card-container">
          <div class="card-1">
              <div class="card-one-img">
-                 <img src="/images/first-t-shirt.png" alt="">
+                 <img src="images/first-t-shirt.png" alt="">
              </div>
              <div class="card-one-text">
                  <h3>Snowboard Jacket Mens</h3>
@@ -123,7 +123,7 @@
          </div>
          <div class="card-2">
              <div class="card-two-img">
-                <img src="/images/second-t-shirt.png" alt="">
+                <img src="images/second-t-shirt.png" alt="">
              </div>
              <div class="card-two-text">
                  <h3>Man Leather Jackets</h3>
@@ -139,7 +139,7 @@
          </div>
          <div class="card-3">
              <div class="card-three-img">       
-                 <img src="/images/third-t-shirt.png" alt="">
+                 <img src="images/third-t-shirt.png" alt="">
              </div>
              <div class="card-three-text">
                  <h3>Man Casual Jackets</h3>
@@ -160,7 +160,7 @@
             <!-- "ls" = i did short form for last section  -->
             <div class="ls-1container">
                 <div class="ls-img">
-                    <img src="/icons/01.png" alt="">
+                    <img src="icons/01.png" alt="">
                 </div>
                 <div class="ls-text">
                     <h3>Find the Perfect Fit</h3>
@@ -169,7 +169,7 @@
             </div>
             <div class="ls-2container">
                 <div class="ls-img">
-                    <img src="/icons/02.png" alt="">
+                    <img src="icons/02.png" alt="">
                 </div>
                 <div class="ls-text">
                     <h3>Free Exchanges</h3>
@@ -178,7 +178,7 @@
             </div>
             <div class="ls-3container">
                 <div class="ls-img">
-                    <img src="/icons/03.png" alt="">
+                    <img src="icons/03.png" alt="">
                 </div>
                 <div class="ls-text">
                     <h3>Contact Our Seller</h3>
@@ -188,7 +188,7 @@
         </div>
         <div class="ls-img-container">
            <div class="lsimg">
-            <img src="/icons/peoples-in-my-shop.png" alt="">
+            <img src="icons/peoples-in-my-shop.png" alt="">
            </div>
         </div>
     </section>
