--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media-query.css">
 </head>
 <body>
     <nav>
@@ -16,7 +15,7 @@
             <div class="nav-logo">
                 <a href=""><img src="icons/logo.png" alt="Customar's Smile"></a>
             </div>
-            <div class="menu">
+            <div class="menu"> <i class="fa fa-bars" aria-hidden="true"></i>
                 <ul>
                     <li>
                         <a href="">Home</a>
@@ -103,7 +102,7 @@
         </div>
        </section>
        <section class="card-section">
-        <h2>MAN JACKET</h2>
+        <h2 class="cs-h2">MAN JACKET</h2>
      <div class="card-container">
          <div class="card-1">
              <div class="card-one-img">
@@ -156,6 +155,11 @@
      </div>
     </section>
     <section class="last-section">
+        <div class="ls-img-container">
+            <div class="lsimg">
+             <img src="icons/peoples-in-my-shop.png" alt="">
+            </div>
+         </div>
         <div class="ls-container">
             <!-- "ls" = i did short form for last section  -->
             <div class="ls-1container">
@@ -186,11 +190,7 @@
                 </div>
             </div>
         </div>
-        <div class="ls-img-container">
-           <div class="lsimg">
-            <img src="icons/peoples-in-my-shop.png" alt="">
-           </div>
-        </div>
+        
     </section>
     </main>
 
